--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -12,7 +12,7 @@
     "downscalePercent": 65
   },
   "newFileLocation": "current",
-  "useMarkdownLinks": false,
+  "useMarkdownLinks": true,
   "showUnsupportedFiles": false,
   "attachmentFolderPath": "./"
 }
